--- a/Module2.html
+++ b/Module2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lapisan Aplikasi dalam Komunikasi Rangkaian - Study Guide</title>
+    <title>Application Layer in Network Communication - Study Guide</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
@@ -76,7 +76,7 @@
             <!-- Study Guide Title -->
             <section class="py-8 mb-8">
                 <h1 class="text-4xl sm:text-5xl font-display font-extrabold text-accent-blue text-center leading-tight">
-                    Lapisan Aplikasi dalam Komunikasi Rangkaian
+                    Application Layer in Network Communication
                 </h1>
                 <p class="mt-4 text-center text-lg text-text-charcoal/80">
                     Comprehensive Study Guide
@@ -87,7 +87,7 @@
             <nav class="mb-12 p-6 bg-subtle-secondary rounded-lg shadow-inner text-text-charcoal">
                 <h2 class="font-display text-2xl font-bold mb-4 text-accent-blue">Table of Contents</h2>
                 <ul class="list-disc ml-6 space-y-2 text-lg">
-                    <li><a href="#summary" class="hover:text-accent-blue transition-colors duration-200">Ringkasan dan Definisi Asas</a></li>
+                    <li><a href="#summary" class="hover:text-accent-blue transition-colors duration-200">Summary and Basic Definitions</a></li>
                     <li><a href="#key-concepts" class="hover:text-accent-blue transition-colors duration-200">List of Key Concepts</a></li>
                     <li><a href="#memory-aids" class="hover:text-accent-blue transition-colors duration-200">Memory Aids</a></li>
                     <li><a href="#structured-guide" class="hover:text-accent-blue transition-colors duration-200">Structured Study Guide Section</a>
