--- a/Module4.html
+++ b/Module4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Komunikasi Rangkaian: Lapisan Rangkaian (Satah Data) - Study Guide</title>
+    <title>Network Communication: Network Layer (Data Plane) - Study Guide</title>
     <!-- Google Fonts - Outfit for display, Lora for body text -->
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
     <!-- Tailwind CSS CDN with extended configuration -->
@@ -118,7 +118,7 @@
         <div class="max-w-7xl mx-auto flex flex-col md:flex-row items-center justify-between">
             <div class="flex items-center mb-4 md:mb-0">
                 <span class="font-display text-2xl font-bold text-accent-blue mr-4">Academic Tutor App</span>
-                <span class="text-xl text-text-light hidden md:block">| Komunikasi Rangkaian</span>
+                <span class="text-xl text-text-light hidden md:block">| Network Communication</span>
             </div>
         </div>
     </header>
@@ -136,11 +136,11 @@
 
         <!-- Main Study Guide Content Area -->
         <main class="w-full lg:w-3/4 main-content">
-            <h1 class="text-center" id="main-title">Komunikasi Rangkaian: Lapisan Rangkaian (Satah Data)</h1>
+            <h1 class="text-center" id="main-title">Network Communication: Network Layer (Data Plane)</h1>
 
             <!-- Section: Introduction/Summary & Basic Definitions -->
             <section id="introduction" class="bg-white rounded-xl shadow-lg p-8 mb-8 border border-accent-blue/10">
-                <h2 class="text-accent-blue border-none pb-0">Ringkasan dan Definisi Asas</h2>
+                <h2 class="text-accent-blue border-none pb-0">Summary and Basic Definitions</h2>
                 <p>The Network Layer is a critical component in the network protocol stack, responsible for end-to-end communication between hosts. While the Transport Layer handles process-to-process communication, it relies on the Network Layer for host-to-host data delivery. This chapter focuses on the <strong>Data Plane</strong> of the network layer, which manages fast, local packet-forwarding functions. It explores the distinctions between forwarding and routing, router internal mechanisms, Internet Protocol (IP) addressing and formats for IPv4 and IPv6, and essential network services like Dynamic Host Configuration Protocol (DHCP) and Network Address Translation (NAT). The chapter also introduces generalized forwarding and Software-Defined Networking (SDN).</p>
 
                 <h3 class="text-accent-blue" id="basic-definitions-intro">Basic Definitions:</h3>
