Translate section title to English

--- a/Module2.html
+++ b/Module2.html
@@ -106,7 +106,7 @@
 
             <!-- Introduction/Summary -->
             <section id="summary" class="py-8 px-6 md:px-12 mb-8 rounded-lg shadow-md bg-white">
-                <h2 class="font-display text-3xl font-bold mb-4 text-accent-blue">Ringkasan dan Definisi Asas</h2>
+                <h2 class="font-display text-3xl font-bold mb-4 text-accent-blue">Summary and Basic Definitions</h2>
                 <p class="mb-6">
                     This study guide covers essential aspects of the Application Layer in network communication, including principles, architecture, and key protocols that enable application interaction over the Internet. It explains transport service models, inter-process communication, and the roles of protocols like HTTP, email (SMTP, POP3, IMAP), DNS, P2P applications, and video streaming with Content Delivery Networks (CDNs). The goal is to provide a comprehensive understanding of how network applications function and interact within the Internet ecosystem.
                 </p>
